k8s/base/zimmerverwaltung/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zimmerverwaltung
spec:
  selector:
    matchLabels:
        app.kubernetes.io/name : zimmerverwaltung
  template:
    metadata:
      labels:
        app.kubernetes.io/name : zimmerverwaltung
    spec:
      containers:
      - name: zimmerverwaltung
        image: zimmerverwaltung
#        resources:
#          requests:
#            memory: "64Mi"
#            cpu: "250m"
#          limits:
#            memory: "128Mi"
#            cpu: "500m"
        ports:
          - containerPort: 5003
