k8s/base/zimmerverwaltung/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zimmerverwaltung
spec:
  selector:
    app.kubernetes.io/name: zimmerverwaltung
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5003
  type: ClusterIP
