k8s/base/zimmerverwaltung/http-route-hotels.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zimmerverwaltung-hotels-route
spec:
  parentRefs:
    - name: booking-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hotels
      backendRefs:
        - name: zimmerverwaltung
          port: 80
