k8s/base/zimmerverwaltung/http-route-room.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zimmerverwaltung-route
spec:
  parentRefs:
    - name: booking-app-gateway
      namespace: booking-app-main
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /create-booking
        - path:
            type: PathPrefix
            value: /room
        - path:
            type: PathPrefix
            value: /search-providers
      backendRefs:
        - name: zimmerverwaltung
          port: 80
